poke/testsuite/poke.pkl/struct-pretty-print-diag-2.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    defun _print = (int a) void: { print "foo"; } /* { dg-error "should be of type" } */
  };
